# JobTrendX

./: .gitignore  README.md  README.md.bak  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml
output_examples/: jobtrendx.log.75
src/: main.py
src/conf/defaults/: hydra.yaml
src/jobtrendx/: analysis.py  body_analysis.py  clean_dataframe.py  colors_text.py  email_processor.py  logger.py  main.py  payload_analysis.py  statistics.py  sub_tools.py  terms_unify.py  tools.py  tools_analysis.py  tools_processor.py  tools_statistics.py  tools_visualization.py  visualization.py
src/jobtrendx/conf/: config.yaml
src/jobtrendx/conf/defaults/: analysis.yaml  paths.yaml
src/jobtrendx/lexicon/: job_titles.yaml  language.yaml  skills.yaml
src/jobtrendx/taxonomy/: general.yaml  job_titles.yaml  language.yaml  locations.yaml  salary.yaml  skills.yaml  title_tags.yaml
tests/: test_body_analysis.py  test_clean_dataframe.py  test_logger.py  test_payload_analysis.py  test_terms_unify.py  test_tools.py  test_tools_statistics.py
